      unescape character escapes like \0XX and \xXX (plus added
      test)
  * apt-pkg/contrib/fileutl.{cc,h}:
    - add GetModificationTime() helper
  * apt-pkg/pkgcachegen.cc:
    - regenerate the cache if the sources.list changes to ensure
      that changes in the ordering there will be honored by apt
  * apt-pkg/sourcelist.{cc,h}:
    - add pkgSourceList::GetLastModifiedTime() helper

 -- Michael Vogt <mvo@debian.org>  Tue, 12 Jul 2011 11:54:47 +0200

apt (0.8.15.1) unstable; urgency=low

  [ David Kalnischkies ]
  * doc/makefile:
    - create doxygen directory to avoid depending on magic (Closes: #628799)
  * cmdline/apt-key:
    - explicitly state that net-update is not supported if no url is set
    - require to be root for add, rm, update and net-update
    - clarify update vs. net-update in different distros (Closes: #632043)
  * debian/apt.symbols:
    - forgot 'mips' in the list for all architecture dependent symbols
    - comment out gcc-4.5 specific symbols as gcc-4.6 is now default
    - the symbol for PrintStatus() is architecture dependent
  * apt-pkg/policy.cc:
    - do not segfault in pinning if a package with this name doesn't exist.
      Thanks to Ferdinand Thommes for the report!
    - Defaults is a vector of Pin not of PkgPin
    - ensure that only the first specific stanza for a package is used
    - save all stanzas which had no effect in Unmatched
    - allow package:architecure in Package:

 -- Michael Vogt <mvo@debian.org>  Thu, 30 Jun 2011 10:05:36 +0200

apt (0.8.15) unstable; urgency=low

  [ Julian Andres Klode ]
  * apt-pkg/depcache.cc:
    - Really release action groups only once (Closes: #622744)
    - Make purge work again for config-files (LP: #244598) (Closes: #150831)
  * apt-pkg/acquire-item.cc:
    - Reject files known to be invalid (LP: #346386) (Closes: #627642)
  * debian/apt.cron.daily:
    - Check power after wait, patch by manuel-soto (LP: #705269)
  * debian/control: